[package]
name = "scarecrow-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.6", features = ["derive"]}
reqwest = {version = "0.13.4", features = ["blocking", "json"]}
tar = {version = "0.4.46"}
flate2 = {version = "1.1.9"}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"